src/objects/sortablegrid__SDG_Field__c.object
<CustomObject>
    <fields>
        <fullName>sortablegrid__APIName__c</fullName>
        <inlineHelpText>APIName of the field to render - use dot notation for lookups to other objects: eg Account.Name</inlineHelpText>
        <label>APIName</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortablegrid__FieldOrder__c</fullName>
        <label>FieldOrder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Field_Style__c</fullName>
        <inlineHelpText>Use a custom renderer with special behaviours</inlineHelpText>
        <label>Custom Renderer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Summarize:Total</fullName>
                </value>
                <value>
                    <fullName>Summarize:Min</fullName>
                </value>
                <value>
                    <fullName>Summarize:Max</fullName>
                </value>
                <value>
                    <fullName>Summarize:Average</fullName>
                </value>
                <value>
                    <fullName>CTI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sortablegrid__Hide_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Override_Label__c</fullName>
        <inlineHelpText>Only put a value here if you want to override the default field label (useful when the field is on another object from the core object - eg createdby.name</inlineHelpText>
        <label>Override Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortablegrid__is_valid_field__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enable/Disable field display.  If the package thinks there&apos;s something wrong with the config it will automatically set this value to false.</inlineHelpText>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sortablegrid__sdg__c</fullName>
        <label>sdg</label>
        <referenceTo>sortablegrid__SDG__c</referenceTo>
        <relationshipName>SDGFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sortable Data Grid Field</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sortable Data Grid Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>